--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,6 @@
-streamlit==1.54.0
-tensorflow-cpu==2.20.0
-opencv-python-headless==4.13.0.92
-fpdf2==2.8.6
-numpy==2.4.2
-matplotlib==3.10.8
-pillow==12.1.1
-ffmpeg-python==0.2.0
+streamlit
+tensorflow-cpu
+opencv-python-headless
+fpdf2
+numpy
+matplotlib
